# src/model/ticketActivity.js
@@ -1,0 +1,35 @@
+const mongoose = require("mongoose");
+
+const ticketActivitySchema = new mongoose.Schema(
+  {
+    ticketId: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: "ticket",
+      required: true,
+    },
+
+    field: {
+      type: String,
+      required: true,
+    },
+
+    oldValue: {
+      type: mongoose.Schema.Types.Mixed,
+    },
+
+    newValue: {
+      type: mongoose.Schema.Types.Mixed,
+    },
+
+    changedBy: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: "user",
+      required: true,
+    },
+  },
+  {
+    timestamps: true,
+  },
+);
+
+module.exports = mongoose.model("ticketActivity", ticketActivitySchema);
