# src/model/ticketComment.js
@@ -1,0 +1,43 @@
+const mongoose = require("mongoose");
+
+const ticketCommentSchema = new mongoose.Schema(
+  {
+    ticketId: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: "ticket",
+      required: true,
+    },
+
+    comment: {
+      type: String,
+      trim: true,
+    },
+
+    attachFile: [
+      {
+        type: String,
+      },
+    ],
+
+    createdBy: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: "user",
+      required: true,
+    },
+
+    isDeleted: {
+      type: Boolean,
+      default: false,
+    },
+
+    deletedAt: {
+      type: Date,
+      default: null,
+    },
+  },
+  {
+    timestamps: true,
+  },
+);
+
+module.exports = mongoose.model("ticketComment", ticketCommentSchema);
